--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Portfólio</title>
-    </head>
-    <body>
-        <h1>This is a tittle</h1>
-        <h2>This is a subtittle</h2>
-        <p>This is a paragraph</p>
-        <img src="logo-html5.png" alt="Logo HTML5">
-    </body>
+
+<head>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap" rel="stylesheet">
+    <title>Portfólio</title>
+</head>
+
+<body>
+    <h1 class="title">Eleve seu negócio digital a outro nível <span>com um Front-end de qualidade!</span></h1>
+
+    <p class="content">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS.
+        Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+    </p>
+    <img src="Imagem.svg" alt="Menina estudando no computador">
+</body>
+
 </html>
