custominzing text and init flexbox

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <link rel="stylesheet" href="reset.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap" rel="stylesheet">
@@ -11,12 +16,21 @@
 </head>
 
 <body>
-    <h1 class="title">Eleve seu negócio digital a outro nível <span>com um Front-end de qualidade!</span></h1>
+    <header></header>
+    <main class="master">
+        <h1 class="master__title">
+            Eleve seu negócio digital a outro nível <strong class="title__strong">com um Front-end de qualidade!</strong>
+        </h1>
+        <p class="master__content">
+            Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS.
+            Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+        </p>
+        <a href="https://www.intagram.com">Instagram</a>
+        <a href="https://www.github.com">Github</a>
+        <img src="Imagem.svg" alt="Menina estudando no computador">
+    </main>
+    <footer></footer>
 
-    <p class="content">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS.
-        Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
-    </p>
-    <img src="Imagem.svg" alt="Menina estudando no computador">
 </body>
 
 </html>
