--- a/index.html
+++ b/index.html
@@ -5,32 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap" rel="stylesheet">
-    <title>Portfólio</title>
 </head>
 
 <body>
     <header></header>
     <main class="master">
-        <h1 class="master__title">
-            Eleve seu negócio digital a outro nível <strong class="title__strong">com um Front-end de qualidade!</strong>
-        </h1>
-        <p class="master__content">
-            Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS.
-            Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
-        </p>
-        <a href="https://www.intagram.com">Instagram</a>
-        <a href="https://www.github.com">Github</a>
+        <section class="master__content">
+            <h1 class="master__title">
+                Eleve seu negócio digital a outro nível <strong class="title__strong">com um Front-end de qualidade!
+                </strong></h1>
+            <p class="master__text">
+                Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+                negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+            </p>
+            <div class="master__links">
+                <a href="https://www.intagram.com" class="master__links__button">Instagram</a>
+                <a href="https://www.github.com" class="master__links__button">Github</a>
+            </div>
+        </section>
         <img src="Imagem.svg" alt="Menina estudando no computador">
     </main>
     <footer></footer>
-
 </body>
 
 </html>
