--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+
+    </header>
     <main class="master">
         <section class="master__content">
             <h1 class="master__title">
@@ -28,7 +30,9 @@
         </section>
         <img src="Imagem.svg" alt="Menina estudando no computador">
     </main>
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por Alura</p>
+    </footer>
 </body>
 
 </html>
