adding nav and init new buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
     <header>
-
+        <nav class="navagation">
+            <a href="">Home</a>
+            <a href="">Sobre Mim</a>
+        </nav>
     </header>
     <main class="master">
         <section class="master__content">
@@ -24,8 +27,10 @@
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="master__links">
-                <a href="https://www.intagram.com" class="master__links__button">Instagram</a>
-                <a href="https://www.github.com" class="master__links__button">Github</a>
+                <h2 class="master__links__title">Acesse minhas redes:</h2>
+                <a href="https://www.github.com" class="master__links__button">GitHub</a>
+                <a href="https://www.linkedin.com" class="master__links__button">Linkedin</a>
+                <a href="https://www.twitch.com" class="master__links__button">Twitch</a>
             </div>
         </section>
         <img src="Imagem.svg" alt="Menina estudando no computador">
