add img before button and finish buttons

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </p>
             <div class="master__links">
                 <h2 class="master__links__title">Acesse minhas redes:</h2>
-                <a href="https://www.github.com" class="master__links__button">GitHub</a>
-                <a href="https://www.linkedin.com" class="master__links__button">Linkedin</a>
-                <a href="https://www.twitch.com" class="master__links__button">Twitch</a>
+                <a href="https://www.github.com" class="master__links__button github">GitHub</a>
+                <a href="https://www.linkedin.com" class="master__links__button linkedin">Linkedin</a>
+                <a href="https://www.twitch.com" class="master__links__button twitch">Twitch</a>
             </div>
         </section>
-        <img src="Imagem.svg" alt="Menina estudando no computador">
+        <img src="Imagem.svg" alt="Menina estudando no computador" class="master__content__img">
     </main>
     <footer>
         <p>Desenvolvido por Alura</p>
