new html -about-

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="navagation">
-            <a href="">Home</a>
-            <a href="">Sobre Mim</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">Sobre Mim</a>
         </nav>
     </header>
     <main class="master">
