organizing and rebiling

--- a/index.html
+++ b/index.html
@@ -17,24 +17,40 @@
             <a href="about.html">Sobre Mim</a>
         </nav>
     </header>
+
     <main class="master">
         <section class="master__content">
+
             <h1 class="master__title">
+
                 Eleve seu negócio digital a outro nível <strong class="title__strong">com um Front-end de qualidade!
                 </strong></h1>
             <p class="master__text">
                 Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
+
             <div class="master__links">
-                <h2 class="master__links__title">Acesse minhas redes:</h2>
-                <a href="https://www.github.com" class="master__links__button github">GitHub</a>
-                <a href="https://www.linkedin.com" class="master__links__button linkedin">Linkedin</a>
-                <a href="https://www.twitch.com" class="master__links__button twitch">Twitch</a>
+                <h2 class="master__links__subtitle">Acesse minhas redes:</h2>
+                <a href="https://www.github.com" class="master__links__button">
+                    <img src="./assents/Logo Github.svg" alt="ícone github">
+                    GitHub
+                </a>
+
+                <a href="https://www.linkedin.com" class="master__links__button">
+                    <img src="./assents/Logo linkedin.svg" alt="ícone linkedin">
+                    GitHub
+                </a>
+
+                <a href="https://www.twitch.tv" class="master__links__button">
+                    <img src="./assents/Logo Twitch.svg" alt="ícone twitch">
+                    GitHub
+                </a>
             </div>
         </section>
-        <img src="Imagem.svg" alt="Menina estudando no computador" class="master__content__img">
+        <img src="./assents/Imagem.svg" alt="Menina estudando no computador" class="master__content__img">
     </main>
+
     <footer>
         <p>Desenvolvido por Alura</p>
     </footer>
