correcting ancor links

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
                 <a href="https://www.linkedin.com" class="master__links__button">
                     <img src="./assents/Logo linkedin.svg" alt="ícone linkedin">
-                    GitHub
+                    Linkedin
                 </a>
 
                 <a href="https://www.twitch.tv" class="master__links__button">
                     <img src="./assents/Logo Twitch.svg" alt="ícone twitch">
-                    GitHub
+                    Twitch
                 </a>
             </div>
         </section>
