hover for botton

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             <div class="master__links">
                 <h2 class="master__links__subtitle">Acesse minhas redes:</h2>
                 <a href="https://www.github.com" class="master__links__button">
-                    <img src="./assents/Logo Github.svg" alt="ícone github">
+                    <img src="assents/Logo Github.svg" alt="ícone github">
                     GitHub
                 </a>
 
                 <a href="https://www.linkedin.com" class="master__links__button">
-                    <img src="./assents/Logo linkedin.svg" alt="ícone linkedin">
+                    <img src="assents/Logo linkedin.svg" alt="ícone linkedin">
                     Linkedin
                 </a>
 
                 <a href="https://www.twitch.tv" class="master__links__button">
-                    <img src="./assents/Logo Twitch.svg" alt="ícone twitch">
+                    <img src="assents/Logo Twitch.svg" alt="ícone twitch">
                     Twitch
                 </a>
             </div>
