--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -15,6 +15,7 @@
         <nav class="navagation">
             <a href="index.html">Home</a>
             <a href="about.html">Sobre Mim</a>
+            <a class="navagation__challenge" href="challenge.html">DESAFIO</a>
         </nav>
     </header>
 
