finish header and init main

--- a/challenge.html
+++ b/challenge.html
@@ -12,13 +12,26 @@
 
 <body>
     <header>
-        <div>
-            <h1 class="name">Vitor Vaz Liede</h1>
-            <h2 class="profission">Dev front-end</h2>
+        <div class="header__tittles">
+            <h1 class="header__tittles__tittle">Vitor Vaz Liede</h1>
+            <h2 class="header__tittles__subtittle">Dev FrontEnd</h2>
         </div>
 
-        <img src="./assents/pog.jpeg" alt="uma foto do Vitor">
+        <img class="header__img" src="./assents/pog.jpeg" alt="uma foto do Vitor">
     </header>
+
+    <main>
+        <h2 class="main__tittle">Experience</h2>
+        <section class="main__experience">
+            
+        </section>
+
+        <aside class="main__contact">
+            <p>vitirnetr@gmail.com</p>
+            <p></p>
+            <p></p>
+        </aside>
+    </main>
 
     <!-- <main>
         <h1>Curriculo - Alura</h1>
