--- a/challenge.html
+++ b/challenge.html
@@ -12,35 +12,40 @@
 
 <body>
     <header>
-        <div class="header__tittles">
-            <h1 class="header__tittles__tittle">Vitor Vaz Liede</h1>
-            <h2 class="header__tittles__subtittle">Dev FrontEnd</h2>
-        </div>
-
-        <img class="header__img" src="./assents/pog.jpeg" alt="uma foto do Vitor">
+        <h1 class="header__tittle">Vitor Vaz Liede</h1>
+        <h2 class="header__subtittle">Dev FrontEnd</h2>
     </header>
 
     <main>
-        <h2 class="main__tittle">Experience</h2>
+        <h2 class="main__tittle">experience</h2>
         <section class="main__experience">
-            
+            <h3 class="main__experience__tittle">Product Designer</h3>
+            <h4 class="main__experience__company">Autark</h4>
+            <h5 class="main__experience__date">May 2019 - Present - 1 year, remote</h5>
+            <p class="main__experience__description">
+            Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and UX of a
+            responsive web application with a lean design process.
+            </p>
         </section>
-
-        <aside class="main__contact">
-            <p>vitirnetr@gmail.com</p>
-            <p></p>
-            <p></p>
-        </aside>
+        <section>
+            <h3 class="main__experience__tittle">Product Designer</h3>
+            <h4 class="main__experience__company">Eden Block</h4>
+            <h5 class="main__experience__date">October 2018 - March 2019 - 6 months, remote</h5>
+            <p class="main__experience__description">
+                Facilitated in-house design services for a venture capital firms internal initiative in real estate
+                management.
+            </p>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
     </main>
 
-    <!-- <main>
-        <h1>Curriculo - Alura</h1>
-        
-    </main>
 
+    <!-- 
     <footer>
         <p>Desenvolvido por Alura</p>
-    </footer> -->
+    </footer>  -->
 </body>
 
 </html>
