git finish main and init aside

--- a/challenge.html
+++ b/challenge.html
@@ -12,33 +12,94 @@
 
 <body>
     <header>
-        <h1 class="header__tittle">Vitor Vaz Liede</h1>
-        <h2 class="header__subtittle">Dev FrontEnd</h2>
+        <div class="header__tittles">
+            <h1 class="header__tittles__tittle">Vitor Vaz Liede</h1>
+            <h2 class="header__tittles__subtittle">Dev FrontEnd</h2>
+        </div>
+        <img src="/assents/pog.jpeg" alt="rosto do vitor">
     </header>
 
     <main>
-        <h2 class="main__tittle">experience</h2>
-        <section class="main__experience">
-            <h3 class="main__experience__tittle">Product Designer</h3>
-            <h4 class="main__experience__company">Autark</h4>
-            <h5 class="main__experience__date">May 2019 - Present - 1 year, remote</h5>
-            <p class="main__experience__description">
-            Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and UX of a
-            responsive web application with a lean design process.
-            </p>
-        </section>
-        <section>
-            <h3 class="main__experience__tittle">Product Designer</h3>
-            <h4 class="main__experience__company">Eden Block</h4>
-            <h5 class="main__experience__date">October 2018 - March 2019 - 6 months, remote</h5>
-            <p class="main__experience__description">
-                Facilitated in-house design services for a venture capital firms internal initiative in real estate
-                management.
-            </p>
-        </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <div class="experience">
+            <h2 class="experience__tittle">experience</h2>
+            <section class="experience__section">
+                <h3 class="experience__subtittle">Product Designer</h3>
+                <h4 class="experience__company">Autark</h4>
+                <h5 class="experience__date">May 2019 - Present - 1 year, remote</h5>
+                <p class="experience__description">
+                    Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and UX
+                    of a
+                    responsive web application with a lean design process.
+                </p>
+            </section>
+
+            <section class="experience__section">
+                <h3 class="experience__subtittle">Product Designer</h3>
+                <h4 class="experience__company">Eden Block</h4>
+                <h5 class="experience__date">October 2018 - March 2019 - 6 months, remote</h5>
+                <p class="experience__description">
+                    Facilitated in-house design services for a venture capital firms internal initiative in real estate
+                    management.
+                </p>
+            </section>
+
+            <section class="experience__section">
+                <h3 class="experience__subtittle">UX Intern</h3>
+                <h4 class="experience__company">GB Foods</h4>
+                <h5 class="experience__date">January 2018 - May 2018 - 5 months, remote</h5>
+                <p class="experience__description">
+                    Delivered a UX strategy to the innovation department for the inception of new products in emerging
+                    packaged goods markets following the Exponential Organization innovation framework.
+                </p>
+            </section>
+
+            <section class="experience__section">
+                <h3 class="experience__subtittle">UX Strategist</h3>
+                <h4 class="experience__company">MainBot</h4>
+                <h5 class="experience__date">June 2016 - May 2018 - 2 years, remote</h5>
+                <p class="experience__description">
+                    Collaborated directly with the CEO and Engineering team to deliver a UX strategy to help children
+                    acquire hands-on STEM education and skills, resulting in the development of an award-winning
+                    product.
+                </p>
+            </section>
+
+            <section class="experience__section">
+                <h3 class="experience__subtittle">Brand Strategist</h3>
+                <h4 class="experience__company">Trivu</h4>
+                <h5 class="experience__date">August 2013 - March 2016 - 2 years and 8 months, Madrid</h5>
+                <p class="experience__description">
+                    Collaborated directly with the CEO and Marketing team to deliver a UX strategy to help young
+                    professionals become better prepared for the job market, and to help large organizations adapt their
+                    company culture to facilitate innovation, resulting in the development of various conferences and
+                    events, as well as consulting programs and partnerships.
+                </p>
+            </section>
+        </div>
+
+        <aside class="aside__info">
+            <div class="aside__contact">
+                <p>macacoloco@gmail.com</p>
+                <p>+55 47 99213-7412</p>
+                <p>Santa Catarina, Brasil</p>
+            </div>
+
+            <div class="aside__knowledge">
+                <h2 class="aside__knowledge__tittle">industry knowledge</h2>
+                <p>Product Design</p>
+                <p>UI Design</p>
+                <p>UX Strategy</p>
+                <p>Interaction Design</p>
+                <p>Design Process</p>
+                <p>Wireframing</p>
+                <p>Rapid Prototyping</p>
+                <p>Product Management</p>
+                <p>Development Methods</p>
+                <p>OKRs</p>
+            </div>
+
+
+        </aside>
     </main>
 
 
