finish main html

--- a/challenge.html
+++ b/challenge.html
@@ -20,83 +20,110 @@
     </header>
 
     <main>
-        <div class="experience">
+        <section class="experience">
             <h2 class="experience__tittle">experience</h2>
-            <section class="experience__section">
-                <h3 class="experience__subtittle">Product Designer</h3>
-                <h4 class="experience__company">Autark</h4>
-                <h5 class="experience__date">May 2019 - Present - 1 year, remote</h5>
-                <p class="experience__description">
+            <dl class="experience__section">
+                <dt class="experience__subtittle">Product Designer</dt>
+                <dd class="experience__company">Autark</dd>
+                <dd class="experience__date">May 2019 - Present - 1 year, remote</dd>
+                <dd class="experience__description">
                     Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and UX
                     of a
                     responsive web application with a lean design process.
-                </p>
-            </section>
+                </dd>
+            </dl>
 
-            <section class="experience__section">
-                <h3 class="experience__subtittle">Product Designer</h3>
-                <h4 class="experience__company">Eden Block</h4>
-                <h5 class="experience__date">October 2018 - March 2019 - 6 months, remote</h5>
-                <p class="experience__description">
+            <dl class="experience__section">
+                <dt class="experience__subtittle">Product Designer</dt>
+                <dd class="experience__company">Eden Block</dd>
+                <dd class="experience__date">October 2018 - March 2019 - 6 months, remote</dd>
+                <dd class="experience__description">
                     Facilitated in-house design services for a venture capital firms internal initiative in real estate
                     management.
-                </p>
-            </section>
+                </dd>
+            </dl>
 
-            <section class="experience__section">
-                <h3 class="experience__subtittle">UX Intern</h3>
-                <h4 class="experience__company">GB Foods</h4>
-                <h5 class="experience__date">January 2018 - May 2018 - 5 months, remote</h5>
-                <p class="experience__description">
+            <dl class="experience__section">
+                <dt class="experience__subtittle">UX Intern</dt>
+                <dd class="experience__company">GB Foods</dd>
+                <dd class="experience__date">January 2018 - May 2018 - 5 months, remote</dd>
+                <dd class="experience__description">
                     Delivered a UX strategy to the innovation department for the inception of new products in emerging
                     packaged goods markets following the Exponential Organization innovation framework.
-                </p>
-            </section>
+                </dd>
+            </dl>
 
-            <section class="experience__section">
-                <h3 class="experience__subtittle">UX Strategist</h3>
-                <h4 class="experience__company">MainBot</h4>
-                <h5 class="experience__date">June 2016 - May 2018 - 2 years, remote</h5>
-                <p class="experience__description">
+            <dl class="experience__section">
+                <dt class="experience__subtittle">UX Strategist</dt>
+                <dd class="experience__company">MainBot</dd>
+                <dd class="experience__date">June 2016 - May 2018 - 2 years, remote</dd>
+                <dd class="experience__description">
                     Collaborated directly with the CEO and Engineering team to deliver a UX strategy to help children
                     acquire hands-on STEM education and skills, resulting in the development of an award-winning
                     product.
-                </p>
-            </section>
+                </dd>
+            </dl>
 
-            <section class="experience__section">
-                <h3 class="experience__subtittle">Brand Strategist</h3>
-                <h4 class="experience__company">Trivu</h4>
-                <h5 class="experience__date">August 2013 - March 2016 - 2 years and 8 months, Madrid</h5>
-                <p class="experience__description">
+            <dl class="experience__section">
+                <dt class="experience__subtittle">Brand Strategist</dt>
+                <dd class="experience__company">Trivu</dd>
+                <dd class="experience__date">August 2013 - March 2016 - 2 years and 8 months, Madrid</dd>
+                <dd class="experience__description">
                     Collaborated directly with the CEO and Marketing team to deliver a UX strategy to help young
                     professionals become better prepared for the job market, and to help large organizations adapt their
                     company culture to facilitate innovation, resulting in the development of various conferences and
                     events, as well as consulting programs and partnerships.
-                </p>
-            </section>
-        </div>
+                </dd>
+            </dl>
+        </section>
 
         <aside class="aside__info">
-            <div class="aside__contact">
-                <p>macacoloco@gmail.com</p>
-                <p>+55 47 99213-7412</p>
-                <p>Santa Catarina, Brasil</p>
-            </div>
+            <ul class="aside__contact__list">
+                <li>macacoloco@gmail.com</li>
+                <li>+55 47 99213-7412</li>
+                <li>Santa Catarina, Brasil</li>
+            </ul>
 
-            <div class="aside__knowledge">
-                <h2 class="aside__knowledge__tittle">industry knowledge</h2>
-                <p>Product Design</p>
-                <p>UI Design</p>
-                <p>UX Strategy</p>
-                <p>Interaction Design</p>
-                <p>Design Process</p>
-                <p>Wireframing</p>
-                <p>Rapid Prototyping</p>
-                <p>Product Management</p>
-                <p>Development Methods</p>
-                <p>OKRs</p>
-            </div>
+            <dl class="aside__knowledge">
+                <dt class="aside__knowledge__tittle">industry knowledge</dt>
+                <dd>
+                    <ul class="aside__knowledge__list">
+                        <li>Product Design</li>
+                        <li>UI Design</li>
+                        <li>UX Strategy</li>
+                        <li>Interaction Design</li>
+                        <li>Design Process</li>
+                        <li>Wireframing</li>
+                        <li>Rapid Prototyping</li>
+                        <li>Product Management</li>
+                        <li>Development Methods</li>
+                        <li>OKRs</li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <dl class="aside__tools">
+                <dt class="aside__tools__tittle">tools</dt>
+                <dd class="aside__tools__itens">
+                    Sketch, Figma, Principle, Framer, InVision, Creative Cloud, Maze, Miro, Webflow, Notion, Typeform,
+                    Google Analytics
+                </dd>
+            </dl>
+
+            <dl class="aside__skills">
+                <dt class="aside__skills__tittle">other skills</dt>
+                <dd class="aside__skills_itens">
+                    HTML, CSS, Swift, Python, Java
+                </dd>
+            </dl>
+
+            <dl class="aside__social">
+                <dt class="aside__social__tittle">tools</dt>
+                <dd class="aside__social__links">
+                    <a class="aside__social__link" href="http://github.com">GitHub</a>
+                    <a class="aside__social__link" href="http://linkedin.com">Linkedin</a>
+                </dd>
+            </dl>
 
 
         </aside>
