--- a/challenge.html
+++ b/challenge.html
@@ -22,59 +22,67 @@
     <main>
         <section class="experience">
             <h2 class="experience__tittle">experience</h2>
-            <dl class="experience__section">
-                <dt class="experience__subtittle">Product Designer</dt>
-                <dd class="experience__company">Autark</dd>
-                <dd class="experience__date">May 2019 - Present - 1 year, remote</dd>
-                <dd class="experience__description">
-                    Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and UX
-                    of a
-                    responsive web application with a lean design process.
-                </dd>
-            </dl>
+            <div class="experience__box">
+                <dl class="experience__section">
+                    <dt class="experience__subtittle">Product Designer</dt>
+                    <dd class="experience__company">Autark</dd>
+                    <dd class="experience__date">May 2019 - Present - 1 year, remote</dd>
+                    <dd class="experience__description">
+                        Collaborated directly with the CEO and Product team to prototype, design and deliver the UI and
+                        UX
+                        of a
+                        responsive web application with a lean design process.
+                    </dd>
+                </dl>
 
-            <dl class="experience__section">
-                <dt class="experience__subtittle">Product Designer</dt>
-                <dd class="experience__company">Eden Block</dd>
-                <dd class="experience__date">October 2018 - March 2019 - 6 months, remote</dd>
-                <dd class="experience__description">
-                    Facilitated in-house design services for a venture capital firms internal initiative in real estate
-                    management.
-                </dd>
-            </dl>
+                <dl class="experience__section">
+                    <dt class="experience__subtittle">Product Designer</dt>
+                    <dd class="experience__company">Eden Block</dd>
+                    <dd class="experience__date">October 2018 - March 2019 - 6 months, remote</dd>
+                    <dd class="experience__description">
+                        Facilitated in-house design services for a venture capital firms internal initiative in real
+                        estate
+                        management.
+                    </dd>
+                </dl>
 
-            <dl class="experience__section">
-                <dt class="experience__subtittle">UX Intern</dt>
-                <dd class="experience__company">GB Foods</dd>
-                <dd class="experience__date">January 2018 - May 2018 - 5 months, remote</dd>
-                <dd class="experience__description">
-                    Delivered a UX strategy to the innovation department for the inception of new products in emerging
-                    packaged goods markets following the Exponential Organization innovation framework.
-                </dd>
-            </dl>
+                <dl class="experience__section">
+                    <dt class="experience__subtittle">UX Intern</dt>
+                    <dd class="experience__company">GB Foods</dd>
+                    <dd class="experience__date">January 2018 - May 2018 - 5 months, remote</dd>
+                    <dd class="experience__description">
+                        Delivered a UX strategy to the innovation department for the inception of new products in
+                        emerging
+                        packaged goods markets following the Exponential Organization innovation framework.
+                    </dd>
+                </dl>
 
-            <dl class="experience__section">
-                <dt class="experience__subtittle">UX Strategist</dt>
-                <dd class="experience__company">MainBot</dd>
-                <dd class="experience__date">June 2016 - May 2018 - 2 years, remote</dd>
-                <dd class="experience__description">
-                    Collaborated directly with the CEO and Engineering team to deliver a UX strategy to help children
-                    acquire hands-on STEM education and skills, resulting in the development of an award-winning
-                    product.
-                </dd>
-            </dl>
+                <dl class="experience__section">
+                    <dt class="experience__subtittle">UX Strategist</dt>
+                    <dd class="experience__company">MainBot</dd>
+                    <dd class="experience__date">June 2016 - May 2018 - 2 years, remote</dd>
+                    <dd class="experience__description">
+                        Collaborated directly with the CEO and Engineering team to deliver a UX strategy to help
+                        children
+                        acquire hands-on STEM education and skills, resulting in the development of an award-winning
+                        product.
+                    </dd>
+                </dl>
 
-            <dl class="experience__section">
-                <dt class="experience__subtittle">Brand Strategist</dt>
-                <dd class="experience__company">Trivu</dd>
-                <dd class="experience__date">August 2013 - March 2016 - 2 years and 8 months, Madrid</dd>
-                <dd class="experience__description">
-                    Collaborated directly with the CEO and Marketing team to deliver a UX strategy to help young
-                    professionals become better prepared for the job market, and to help large organizations adapt their
-                    company culture to facilitate innovation, resulting in the development of various conferences and
-                    events, as well as consulting programs and partnerships.
-                </dd>
-            </dl>
+                <dl class="experience__section">
+                    <dt class="experience__subtittle">Brand Strategist</dt>
+                    <dd class="experience__company">Trivu</dd>
+                    <dd class="experience__date">August 2013 - March 2016 - 2 years and 8 months, Madrid</dd>
+                    <dd class="experience__description">
+                        Collaborated directly with the CEO and Marketing team to deliver a UX strategy to help young
+                        professionals become better prepared for the job market, and to help large organizations adapt
+                        their
+                        company culture to facilitate innovation, resulting in the development of various conferences
+                        and
+                        events, as well as consulting programs and partnerships.
+                    </dd>
+                </dl>
+            </div>
         </section>
 
         <aside class="aside__info">
@@ -118,17 +126,14 @@
             </dl>
 
             <dl class="aside__social">
-                <dt class="aside__social__tittle">tools</dt>
+                <dt class="aside__social__tittle">social</dt>
                 <dd class="aside__social__links">
                     <a class="aside__social__link" href="http://github.com">GitHub</a>
                     <a class="aside__social__link" href="http://linkedin.com">Linkedin</a>
                 </dd>
             </dl>
-
-
         </aside>
     </main>
-
 
     <!-- 
     <footer>
