adjust contact dl

--- a/challenge.html
+++ b/challenge.html
@@ -86,11 +86,16 @@
         </section>
 
         <aside class="aside__info">
-            <ul class="aside__contact__list">
-                <li>macacoloco@gmail.com</li>
-                <li>+55 47 99213-7412</li>
-                <li>Santa Catarina, Brasil</li>
-            </ul>
+            <dl>
+                <dt class="aside__contact__tittle">contact</dt>
+                <dd>
+                    <ul class="aside__contact__list">
+                        <li>macacoloco@gmail.com</li>
+                        <li>+55 47 99213-7412</li>
+                        <li>Santa Catarina, Brasil</li>
+                    </ul>
+                </dd>
+            </dl>
 
             <dl class="aside__knowledge">
                 <dt class="aside__knowledge__tittle">industry knowledge</dt>
