--- a/challenge.html
+++ b/challenge.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <!-- Refaturar codigo com SMACSS -->
+
     <title>Challenge</title>
+
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/challenge.css">
 </head>
@@ -139,11 +143,6 @@
             </dl>
         </aside>
     </main>
-
-    <!-- 
-    <footer>
-        <p>Desenvolvido por Alura</p>
-    </footer>  -->
 </body>
 
 </html>
